--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,33 @@
-plugins {
-    id 'java'
+
+
+
+allprojects {
+    group = 'com.tlinks'
+    version = '1.0.0-SNAPSHOT'
 }
 
-group 'org.example'
-version '1.0-SNAPSHOT'
+subprojects {
+    apply plugin: "idea"
+    apply plugin: "java-library"
+    apply plugin: "maven-publish"
 
-repositories {
-    mavenCentral()
-}
+    repositories {
+        mavenCentral()
+    }
 
-dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
-}
+    dependencies {
 
-test {
-    useJUnitPlatform()
+        api 'io.projectreactor:reactor-core:3.4.21'
+
+        api 'org.projectlombok:lombok:1.18.0'
+
+        api 'org.slf4j:slf4j-api:1.7.25'
+
+        api 'ch.qos.logback:logback-classic:1.2.3'
+        api 'ch.qos.logback:logback-core:1.2.3'
+
+//    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+//    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    }
+
 }
