--- a/network-module/network-mqtt-module/build.gradle
+++ b/network-module/network-mqtt-module/build.gradle
@@ -1,7 +1,7 @@
 
 dependencies {
 
-    porject('network-core-module')
+    compile project(":network-module:network-core-module")
 
 //    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
 //    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
