--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,3 @@
-
-
-
 allprojects {
     group = 'com.tlinks'
     version = '1.0.0-SNAPSHOT'
@@ -17,15 +14,19 @@ subprojects {
     }
 
     ext {//依赖版本
-        reactorCoreVersion = "3.4.21"
+        reactorCoreVersion = "3.4.22"
         lombokVersion = "1.18.0"
         slf4jApiVersion = "1.7.25"
         logbackVersion = "1.2.3"
+        vertxMqttVersion = "4.3.0"
+        guavaVersion = "31.1-jre"
     }
 
     dependencies {
 
         api("io.projectreactor:reactor-core:${reactorCoreVersion}")
+
+        api("io.vertx:vertx-mqtt:${vertxMqttVersion}")
 
         api("org.projectlombok:lombok:${lombokVersion}")
 
@@ -34,8 +35,10 @@ subprojects {
         api("ch.qos.logback:logback-classic:${logbackVersion}")
         api("ch.qos.logback:logback-core:${logbackVersion}")
 
-//    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-//    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+        implementation "group:com.google.guava:guava:${guavaVersion}"
+
+        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     }
 
 }
