--- a/build.gradle
+++ b/build.gradle
@@ -15,11 +15,11 @@ subprojects {
 
     ext {//依赖版本
         reactorCoreVersion = "3.4.22"
-        lombokVersion = "1.18.0"
+        lombokVersion = "1.18.22"
         slf4jApiVersion = "1.7.25"
         logbackVersion = "1.2.3"
         vertxMqttVersion = "4.3.0"
-        guavaVersion = "31.0.1-jre"
+        guavaVersion = "31.1-jre"
     }
 
     dependencies {
@@ -28,14 +28,19 @@ subprojects {
 
         api("io.vertx:vertx-mqtt:${vertxMqttVersion}")
 
-        api("org.projectlombok:lombok:${lombokVersion}")
-
         api("org.slf4j:slf4j-api:${slf4jApiVersion}")
-
         api("ch.qos.logback:logback-classic:${logbackVersion}")
         api("ch.qos.logback:logback-core:${logbackVersion}")
 
-        implementation "group:com.google.guava:guava:${guavaVersion}"
+        implementation("com.google.guava:guava:${guavaVersion}")
+
+
+        compileOnly("org.projectlombok:lombok:${lombokVersion}")
+        annotationProcessor("org.projectlombok:lombok:${lombokVersion}")
+        testCompileOnly("org.projectlombok:lombok:${lombokVersion}")
+        testAnnotationProcessor("org.projectlombok:lombok:${lombokVersion}")
+
+//        implementation group: 'com.google.guava', name: 'guava', version: '31.1-jre'
 
         testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
         testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
